# parallel_labs

./: CMakeLists.txt  README.md  main.cpp
include/: AbstractParallelRunner.h  AbstractProcessFactory.h  AbstractSignalHandler.h  AbstractSystemInterrupter.h  AbstractTemplatedParallelRunner.h  Callable.h  LinuxProccessParallelRunner.h  LinuxThreadParallelRunner.h  MPIParallelRunner.h  OpenMpParallelRunner.h  PlatformDefiner.h  SharedMemorySystemInterrupter.h  SocketServerSystemInterrupter.h  UnixForkProcessRunner.h  encryptor.h  parallel_decryptor.h  tcp_server.h  to_string_helper.h  twofish.h
sources/: LinuxProccessParallelRunner.cpp  LinuxThreadParallelRunner.cpp  OpenMpParallelRunner.cpp  SharedMemorySystemInterrupter.cpp  encryptor.cpp  enryptor.cpp  twofish.cpp
